# SWeChat

./: .gitmodules  CMakeLists.txt  README.md
src/: client.cpp  server.cpp  test.cpp
src/chat/: client.cpp  client.h  common.h  file_client.cpp  file_client.h  file_server.cpp  file_server.h  queue.h  server.cpp  server.h
src/database/: db.cpp  db.h  friend_ship.h  user.h
src/gui/: chat.cpp  chat.h  main.cpp  main.h  welcome.cpp  welcome.h
src/tcp/: client.cpp  client.h  server.cpp  server.h  socket.cpp  socket.h
